z-index fix

--- a/css/style.css
+++ b/css/style.css
@@ -215,7 +215,7 @@ border: 1px solid #111;
   top:-6em;
   right:0;
   float:right;
-  z-index: 10;
+  z-index: 39;
   position: relative;
   height:3em;
   vertical-align: middle;
